crates/cribo/src/snapshots/cribo__unused_import_trimmer__tests__custom_preserve_patterns.snap
---
source: crates/serpen/src/unused_import_trimmer.rs
description: Custom preserve patterns keep specified imports even if unused
expression: format_trim_result(&result)
---
Has changes: true
Removed imports count: 2
Removed imports:
  - json (json)
  - os (os)
Transformed code:
import django.setup
import pytest_django
def main():
    pass
